# financial-bad-news

./: .env.example  .gitignore  README.md  pyproject.toml  tophub.py
src/financial_bad_news/: __init__.py  __main__.py  classification.py  cli.py  config.py  db.py  filters.py  models.py  pipeline.py  repository.py  rss.py  scheduler.py  tophub_client.py  web.py
src/financial_bad_news/templates/: dashboard.html
tests/: conftest.py  test_classification.py  test_filters.py  test_pipeline.py  test_rss.py
