[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-bad-news"
version = "0.1.0"
description = "Automated pipeline for collecting and filtering negative financial news"
authors = [{ name = "Auto Generated" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "APScheduler>=3.10",
    "Flask>=3.0",
    "feedgen>=0.9",
    "snownlp>=0.12",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2"
]

[project.scripts]
financial-bad-news = "financial_bad_news.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=4.1",
    "ruff>=0.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
